# neuro-noir

./: .env.example  .gitignore  README.md  chunk-test.py  pyproject.toml
data/: annotations-the-adventure-of-the-three-students.json  annotations-the-five-orange-pips.json  annotations-the-mysterious-affair-at-styles.json  the-case-book-of-sherlock-holmes.txt
data/models/: annotator.json
data/the-adventure-of-the-retired-colourman/: annotations.json
notebooks/: chunking-neuro-noir.py  chunking.py  gemini-test.py  knowledge-graph-neuro-noir.py  workshop-neuro-noir-part-01-solution.py  workshop-neuro-noir-part-01.py  workshop-neuro-noir-part-02-solution.py  workshop-neuro-noir-part-02.py  workshop-neuro-noir-solution.py  workshop-neuro-noir.py
src/neuro_noir/: __init__.py  __main__.py  knowledgebase.py  model.py
src/neuro_noir/annotations/: examples.py  judges.py  optimize.py  signature.py
src/neuro_noir/chunking/: scenebased.py
src/neuro_noir/core/: app.py  config.py  connections.py  database.py  db.py  lm.py  report.py  store.py
src/neuro_noir/datasets/: __init__.py  the-adventure-of-the-three-students.txt  the-five-orange-pips.txt
src/neuro_noir/datasets/the-adventure-of-the-retired-colourman/: annotations2.json  licence.txt
src/neuro_noir/datasets/the-adventure-of-the-three-students/: licence.txt
src/neuro_noir/datasets/the-five-orange-pips/: licence.txt
src/neuro_noir/graph/: chunks.py  documents.py  entities.py  mapping.py  populate.py  relations.py  relationships.py  statements.py
src/neuro_noir/llm/: disambiguator.py  embed.py  extractor.py  initialize.py  resolver.py  runner.py  statement.py
src/neuro_noir/models/: chunk.py  document.py  entity.py  relationship.py  statement.py
tests/: test_config.py  test_datasets.py
(+1 files in other folders)
