[project]
name = "neuro-noir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "A Swarm of Ralf", email = "ralf@swarm-intelligence.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.3",
    "graphiti-core>=0.22.0",
    "marimo>=0.17.7",
    "neo4j>=6.0.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
