[project]
name = "neuro-noir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "A Swarm of Ralf", email = "ralf@swarm-intelligence.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "dspy>=3.0.3",
    "google-genai>=1.63.0",
    "graphiti-core>=0.22.0",
    "marimo>=0.17.7",
    "neo4j>=6.0.2",
    "nest-asyncio>=1.6.0",
    "polars>=1.38.1",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.61.0",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
